--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
-.box{
-    color: brown;
+.test{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    background-color: #fff;
 }
